--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
