--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
     "angular-route": "^1.6.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "ng2-bs4-modal": "^0.5.1",
+    "popper": "^1.0.1",
     "rxjs": "^5.5.4",
     "zone.js": "^0.8.14"
   },
