--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
     "angular-route": "^1.6.7",
+    "angular2-modal": "^3.0.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "ng2-bs4-modal": "^0.5.1",
+    "ngx-modialog": "^5.0.0",
     "popper": "^1.0.1",
     "rxjs": "^5.5.4",
     "zone.js": "^0.8.14"
