--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "md-content": "^1.0.8",
     "ng2-bs4-modal": "^0.5.1",
     "ngx-modialog": "^5.0.0",
     "popper": "^1.0.1",
