adaugare menu tab

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.2.1",
     "md-content": "^1.0.8",
     "ng2-bs4-modal": "^0.5.1",
+    "ngx-bootstrap": "^2.0.0-beta.10",
     "ngx-modialog": "^5.0.0",
     "popper": "^1.0.1",
     "rxjs": "^5.5.4",
